--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: #eee9dc !important;
+  background: linear-gradient(#fef3ea, #f5f1ee) !important;
 }
 .title {
   font-size: 4rem !important;
@@ -70,13 +70,18 @@ body {
   50% {
     color: #80808080;
   }
+  100% {
+    color: #808080;
+  }
+}
+
+/* Synchronized animation class */
+.sync-pulse {
+  animation: textpulse 1s infinite;
 }
 
 @keyframes becomewhitecircle {
   0% {
-  }
-  30% {
-    color: white;
   }
   100% {
     width: 204px;
@@ -84,11 +89,16 @@ body {
     aspect-ratio: 1/1 !important;
     border-radius: 50%;
     opacity: 1;
-    background-color: white;
     user-select: none;
     pointer-events: none;
     color: white;
+   
   }
+}
+
+.boo {
+   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0px 20px 10px -5px rgba(255,255,255,1) inset !important;
+                      background: #fbf8f5ff !important;
 }
 
 @keyframes becomewhitesquircle {
